--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,11 @@ nav a {
         display: block;
     }
 
+    nav .sidebar a {
+        font-size: 2rem;
+        color: black;
+    }
+
 }
 
 /*======= end navbar css =======*/
@@ -212,9 +217,191 @@ nav a {
     }
 }
 
-
 /*======= end landing page css =======*/
 
 
 
 /*======= main content page css =======*/
+
+.mainbody {
+    background-color: rgb(196, 69, 69);
+}
+.main {
+    width: 100%;
+    /* height: 50vh; */
+    padding: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    border: 2px black solid;
+    justify-content: space-evenly;
+    align-items: center;
+    
+}
+
+.mheading {
+    text-align: center;
+    padding: 2rem;
+    font-family: sans-serif;
+    font-size: 1rem;
+    /* border: 2px black solid; */
+    
+}
+
+.main .content-1 {
+    width: 30%;
+    padding: 1rem;
+    /* border: 2px black dotted; */
+}
+
+.main .content-2 {
+    width: 30%;
+    padding: 1rem;
+    /* border: 2px black dotted; */
+}
+
+.main .content-3 {
+    width: 30%;
+    padding: 1rem;
+    /* border: 2px black dotted; */
+}
+.main .pic {
+    width: 100%;
+    /* border: blueviolet 2px solid; */
+}
+.main .pic img {
+    width: 100%;
+    height: 100%;
+}
+span {
+    display: block;
+    font-size: 2rem;
+    text-align: center;
+    padding: 1rem;
+}
+
+@media(max-width:900px) {
+    .main {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .main .content-1 {
+        width: 90%;
+    }
+
+    .main .content-2 {
+        width: 90%;
+    }
+
+    .main .content-3 {
+        width: 90%;
+    }
+}
+
+.phead {
+    min-width: 100;
+    padding: 1rem;
+    /* border: 2px rebeccapurple solid; */
+}
+
+.phead .p-1 {
+    display: flex;
+    padding: 1rem;
+    /* width: 100%; */
+    justify-content: space-evenly;
+    align-items: center;
+    /* border: 2px black solid; */
+}
+
+.phead .p-2 {
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+    align-items: center;
+    /* width: 100%; */
+    flex-direction: row-reverse;
+    /* border: 2px black solid; */
+}
+
+.phead .p-3 {
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+    align-items: center;
+    /* width: 100%; */
+    /* border: 2px black solid; */
+}
+.phead .pic {
+    /* border: 2px red solid; */
+    width: 700px;
+    /* height: 40%; */
+}
+
+.phead .pic img {
+    width: 100%;
+    height: 100%;
+}
+.phead .detail {
+    padding: 2rem;
+    font-size: 1.2rem;
+    /* border: 2px rgb(63, 37, 37) solid; */
+}
+.product {
+    background-color: rgb(185, 102, 99);
+}
+.product-head {
+    text-align: center;
+    padding: 2rem;
+    font-size: 2rem;
+    font-family: sans-serif;
+}
+
+@media (max-width:700px) {
+ 
+    .phead .pic {
+        /* border: 2px red solid; */
+        width: 100%;
+        /* height: 40%; */
+    }
+
+    .phead .p-1 {
+        flex-direction: column;
+    }
+    .phead .p-2 {
+        flex-direction: column;
+    }
+    .phead .p-3 {
+        flex-direction: column;
+    }
+}
+
+.contactUs {
+  padding: 2rem;
+    background-color: burlywood;
+}
+
+.contactUs .con-h1 h1 {
+    text-align: center;
+    padding: 2rem;
+    font-family: sans-serif;
+    font-size: 2rem;
+}
+
+
+.contact {
+    display: flex;
+    justify-content: space-around;
+}
+
+.contact a {
+    display: block;
+    width: 40%;
+    padding: 0.5rem;
+    text-decoration: none;
+    border-radius: 20px;
+    text-align: center;
+    margin-top:2rem;
+    color: black;
+    background-color: antiquewhite;
+}
+
