--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ header {
     height: 60px;
     /* border: 2px red solid; */
     background-color: brown;
-    /* color: black; */
+    
     padding: 2rem;
 }
 
@@ -25,9 +25,6 @@ nav {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-
-    /* background-color: brown; */
-    /* border: blue 2px solid; */
 }
 
 /* fix logo container width and height */
@@ -36,7 +33,7 @@ nav .logo {
     height: 3em;
     border-radius: 50%;
 
-    border: 2px solid rgb(72, 54, 73);
+    /* border: 2px solid rgb(72, 54, 73); */
 }
 
 
@@ -123,6 +120,7 @@ nav a {
 
 /*======= end navbar css =======*/
 
+
 /*======= start landing page css =======*/
 
 .landing-page {
@@ -132,37 +130,22 @@ nav a {
     flex-wrap: wrap;
     /* overflow: hidden; */
     flex-direction: row-reverse;
-    /* gap: 2rem; */    
+    /* gap: 5rem;     */
     justify-content: space-around;
     text-align: center;
     background-color: brown;
     /* border: 2px black solid; */
-    /* height: 93.9vh; */
 }
 
 .landing-page .lottie {
     width: 30%;
-    /* max-height: 25rem; */
     margin-top: 7rem;
- 
-    /* border-radius: 300px; */
-    /* border: 2px yellow solid; */
-    /* background-color: ; */
-   
     box-shadow: 7px 2px 80px 20px  rgba(255, 255, 187, 0.685) ;
 
 }
 
-/* .landing-page lottie-player {
-    z-index: 10;
-    border: black 2px solid;
-} */
-
 .landing-page .info {
-
     width: 40%;
-    /* padding: 10rem 5rem 0rem 0rem; */
-    /* border-radius: 20px; */
 }
 
 .landing-page .info .heading {
@@ -188,10 +171,8 @@ nav a {
         justify-content: center;
         width: 100%;
         /* border: 2px solid black; */
-        /* margin-left: 15%; */
         margin-top: -50px;
         height: 25rem;
-        /* margin-top: -50px; */
     }
     .landing-page lottie-player {
         /* max-width: 50%; */
@@ -203,18 +184,32 @@ nav a {
         width: 100%;
         /* border: 2px black solid; */
     }
-    
 }
 
 @media (max-width:780px) {
-
     .landing-page .info .heading {
         font-size: 2rem;
+    }
+    .landing-page {
+        padding: 0;
     }
 
     .landing-page .lottie {
         box-shadow: none;
+        margin-top: 0px;
+        height: 20rem;
     }
+    .landing-page .info {
+        padding: 2rem;
+        /* border: 2px black solid; */
+    }
+}
+
+@media (max-width:450px) {
+    .landing-page .info .heading {
+        font-size: 1rem;
+    }
+
 }
 
 /*======= end landing page css =======*/
@@ -232,7 +227,7 @@ nav a {
     padding: 2rem;
     display: flex;
     flex-wrap: wrap;
-    border: 2px black solid;
+    /* border: 2px black solid; */
     justify-content: space-evenly;
     align-items: center;
     
@@ -359,9 +354,7 @@ span {
 @media (max-width:700px) {
  
     .phead .pic {
-        /* border: 2px red solid; */
         width: 100%;
-        /* height: 40%; */
     }
 
     .phead .p-1 {
@@ -375,18 +368,74 @@ span {
     }
 }
 
-.contactUs {
-  padding: 2rem;
-    background-color: burlywood;
+
+/* gallery style */
+
+.imageGallery {
+    padding: 2rem;
+    background-color: rgba(243, 64, 19, 0.329);
+}
+
+.imageGallery h2 {
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 2rem;
+    text-align: center;
+    line-height: 1.5;  
+  }
+  
+  p {
+    margin: .5rem 0;
+    font-size: 1.25rem;
+    line-height: 1.5;
+  }
+  
+  /* First the Grid */
+  .gallery-grid {
+    display: -ms-grid;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 1.5rem;
+    justify-items: center;
+    margin: 0;
+    padding: 0;
+  }
+  
+  /* The Picture Frame */
+  .gallery-frame {
+    padding: .5rem;
+    font-size: 1.2rem;
+    text-align: center;
+    background-color: #333;
+    color: #d9d9d9;
+  }
+  
+  /* The Images */
+  .gallery-img {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+    transition: opacity 0.25s ease-in-out;
+  }
+  
+  .gallery-img:hover {
+    opacity: .7;
+  }
+
+
+
+  .contactUs {
+    font-family: sans-serif;
+    padding: 2rem;
+    color: white !important;
+    background-color: rgba(0, 0, 0, 0.801);
 }
 
 .contactUs .con-h1 h1 {
     text-align: center;
     padding: 2rem;
-    font-family: sans-serif;
     font-size: 2rem;
 }
-
 
 .contact {
     display: flex;
@@ -394,7 +443,7 @@ span {
     justify-content: space-around;
 }
 
-.contact a {
+.contact .c1 a {
     display: block;
     width: 40%;
     padding: 0.5rem;
@@ -410,5 +459,87 @@ span {
     padding: 2rem;
 }
 
-/* @media(max-width:900px) {
-} */
+.contact .links {
+    width: 100%;
+    padding: 2rem;
+}
+
+.contact .links h1 {
+    display: block;
+    font-size: 2rem;
+    text-align: center;
+    padding-bottom: 1rem;
+}
+
+.contact .links .link {    
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.contact .links .link a {
+    width: 100px;
+    padding: 0.5rem;
+    text-decoration: none;
+    border-radius: 20px;
+    text-align: center;
+    margin-top:2rem;
+    color: #d9d9d9;
+    font-size: 20px;
+}
+
+.contact .links .link a:hover {
+    color: black;
+    background-color: antiquewhite;
+    transition: 0.5s;
+}
+
+
+.social {
+    width: 100%;
+    margin-bottom: 50px;   
+}
+
+.social h1 {
+    text-align: center;
+    padding: 1rem;
+    font-size: 2rem;
+}
+
+.social .link {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.social .link a {
+    width: 100px;
+    padding: 0.5rem;
+    text-decoration: none;
+    border-radius: 20px;
+    text-align: center;
+    margin-top:2rem;
+}
+
+.social .link a i{
+    color: white;
+    font-size: 30px;
+}
+
+.social .link a i:hover {
+    border-radius: 30px;
+    color: blue; 
+    padding: 1rem;
+    transition: 0.5s;
+    background-color: white;
+}
+
+.social .link a .fa-instagram:hover {
+  color: red;
+  background-color: white;
+  padding: 1rem;
+  transition: 0.5s;
+}
