--- a/css/style.css
+++ b/css/style.css
@@ -87,12 +87,15 @@ nav a {
     #myLinks{
         position: absolute;
         display:none;
-        background-color:rgba(255, 255, 187, 0.685);
-        border: 2px red solid;    
+        background-color: white;
+        
+        /* background-color:rgba(255, 255, 187, 0.685); */
+        border: 2px black solid;    
         top: 3.6rem;
         left: -35px;
         min-width: 70%;
         text-align: center;
+        z-index: 2;
 
         /* transition: all 50ms ease; */
     
@@ -101,7 +104,10 @@ nav a {
     #myLinks a {
         display: block;
         z-index: 2;
-        margin-top: 20px;
+        padding: 2rem;
+        /* margin-top: 20px;
+        margin-bottom: 20px; */
+        /* color: white; */
     }
     #myLinks a:hover {
         background-color: rgba(255, 255, 187, 0.685);
@@ -139,8 +145,11 @@ nav a {
 }
 
 .landing-page .lottie {
+    position: relative;
     width: 30%;
+    z-index: 1;
     margin-top: 7rem;
+    /* border: 2px black solid; */
     box-shadow: 7px 2px 80px 20px  rgba(255, 255, 187, 0.685) ;
 
 }
