--- a/css/about.css
+++ b/css/about.css
@@ -2,6 +2,8 @@
 #about-sec{
     padding-top: 3rem;
     background-color: brown;
+    color: rgb(241, 219, 190);
+    text-align: justify;
    
 
 }
